# aa-example

./: .coveragerc  .gitignore  .isort.cfg  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  package-lock.json  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: autotester.yml  pypi.yml
example/: __init__.py  app_settings.py  apps.py  auth_hooks.py  constants.py  decorators.py  hooks.py  managers.py  models.py  providers.py  tasks.py  urls.py  views.py
example/api/: __init__.py  character.py  schema.py
example/helpers/: static_files.py
example/migrations/: 0001_initial.py
example/static/example/css/: aa-example.css
example/static/example/js/: aa-example.js
example/templates/example/: admin.html  base.html  index.html  view-index.html
example/templates/example/bundles/: aa-example-css.html  aa-example-js.html  datatables-2-css.html  datatables-2-js.html
example/templates/template/: base.html  index.html
example/templates/template/partials/: navigation.html
example/templatetags/: template.py
example/tests/: __init__.py  test_view.py
example/tests/testdata/: utils.py
example/tests/testdata/integrations/: allianceauth.json
template/: __init__.py  app_settings.py  apps.py  auth_hooks.py  constants.py  decorators.py  hooks.py  managers.py  models.py  providers.py  tasks.py  urls.py  views.py
template/helpers/: static_files.py
template/locale/es/LC_MESSAGES/: django.po
template/locale/ja/LC_MESSAGES/: django.po
template/locale/nl_NL/LC_MESSAGES/: django.po
template/migrations/: 0001_initial.py
template/templates/template/: base.html  index.html
template/templatetags/: template.py
template/tests/: test_view.py
testauth/settings/: local.py
(+6 files in other folders)
